[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geocaching-utils"
version = "0.1.0"
description = "A collection of utilities for geocaching puzzle solving"
readme = "README.md"
authors = [
    {name = "geocaching-Utils Team", email = "hytegeocaching@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/spectraldecomp/geocaching-utils"
"Bug Tracker" = "https://github.com/spectraldecomp/geocaching-utils/issues"

[project.scripts]
gc-utils = "geocaching_utils.cli.main:main"

[tool.setuptools]
packages = ["geocaching_utils", "geocaching_utils.cli", "geocaching_utils.utils", "geocaching_utils.tests"]

[tool.setuptools.package-data]
"geocaching_utils" = ["data/**/*"] 